--- a/customer-express/package.json
+++ b/customer-express/package.json
@@ -12,11 +12,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "@supabase/supabase-js": "^2.45.4",
     "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "firebase-admin": "^12.6.0",
     "netlify-cli": "^17.36.3",
     "netlify-lambda": "^2.0.16",
+    "resend": "^4.0.0",
     "serverless-http": "^3.2.0"
   }
 }
