--- a/customer-express/netlify.toml
+++ b/customer-express/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 node_bundler = "esbuild"
-functions = "netlify/functions"
+functions = "/netlify/functions"
 
 [[redirects]]
 from = "/api/*"
