--- a/customer-express/package.json
+++ b/customer-express/package.json
@@ -16,13 +16,18 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@supabase/supabase-js": "^2.45.4",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-rate-limit": "^7.4.1",
+    "fs": "^0.0.1-security",
     "netlify-cli": "^17.36.3",
     "netlify-lambda": "^2.0.16",
     "resend": "^4.0.0",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "xss-clean": "^0.1.4"
   }
 }
