--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,43 +1,51 @@
-# This config was automatically generated from your source code
-# Stacks detected: deps:node:frontend
 version: 2.1
-orbs:
-  node: circleci/node@5
+
 jobs:
-  build-node:
-    # Build node project
-    executor: node/default
-    working_directory: ~/project/frontend
-    steps:
-      - checkout:
-          path: ~/project
-      - node/install-packages:
-          pkg-manager: npm
-      - run:
-          command: npm run build
-      - run:
-          name: Create the ~/artifacts directory if it doesn't exist
-          command: mkdir -p ~/artifacts
-      # Copy output to artifacts dir
-      - run:
-          name: Copy artifacts
-          command: cp -R build dist public .output .next .docusaurus ~/artifacts 2>/dev/null || true
-      - store_artifacts:
-          path: ~/artifacts
-          destination: node-build
-  deploy:
-    # This is an example deploy job, not actually used by the workflow
-    docker:
-      - image: cimg/base:stable
-    steps:
-      # Replace this with steps to deploy to users
-      - run:
-          name: deploy
-          command: '#e.g. ./deploy.sh'
-workflows:
   build:
+    docker:
+      - image: circleci/node:22  # Use an appropriate Node.js image
+    steps:
+      - checkout  # Check out the code from the repository
+      - run:
+          name: Install dependencies for frontend (React)
+          command: |
+            cd frontend
+            npm install
+      - run:
+          name: Install dependencies for backend (Express.js)
+          command: |
+            cd customer-express
+            npm install
+
+  sonarQubeAnalysis:
+    docker:
+      - image: sonarsource/sonar-scanner-cli:latest  # SonarQube scanner Docker image
+    steps:
+      - checkout
+      - run:
+          name: SonarQube Analysis for Frontend (React)
+          command: |
+            cd frontend
+            sonar-scanner \
+              -Dsonar.projectKey=VC-Customer-Portal_portal \
+              -Dsonar.sources=src \
+              -Dsonar.host.url=https://sonarcloud.io \
+              -Dsonar.login=$SONAR_TOKEN
+      - run:
+          name: SonarQube Analysis for Backend (Express.js)
+          command: |
+            cd backend
+            sonar-scanner \
+              -Dsonar.projectKey=VC-Customer-Portal_portal \
+              -Dsonar.sources=src \
+              -Dsonar.host.url=https://sonarcloud.io \
+              -Dsonar.login=$SONAR_TOKEN
+
+workflows:
+  version: 2
+  build_and_analyze:
     jobs:
-      - build-node
-    # - deploy:
-    #     requires:
-    #       - build-node
+      - build
+      - sonarQubeAnalysis:
+          requires:
+            - build
