--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node@5 
+      - image: circleci/node:22
     steps:
       - checkout  # Check out the code from the repository
       - run:
