--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
             cd frontend
             sonar-scanner -X \
               -Dsonar.projectKey=VC-Customer-Portal_portal \
+              -Dsonar.organization=vc-customer-portal \
               -Dsonar.sources=src \
               -Dsonar.host.url=https://sonarcloud.io \
               -Dsonar.login=$SONAR_TOKEN
@@ -37,6 +38,7 @@ jobs:
             cd customer-express
             sonar-scanner -X \
               -Dsonar.projectKey=VC-Customer-Portal_portal \
+              -Dsonar.organization=vc-customer-portal \
               -Dsonar.sources=src \
               -Dsonar.host.url=https://sonarcloud.io \
               -Dsonar.login=$SONAR_TOKEN
